--- a/src/pages/mod/additive-shader.astro
+++ b/src/pages/mod/additive-shader.astro
@@ -3,96 +3,152 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Additive Shader - Cities Skylines Modding';
-import ResponsiveImage from '../../components/ResponsiveImage.astro';
+import { Picture } from 'astro:assets';
 import { images } from '../../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
 	<TableOfContents />
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
-		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Additive Shader</h1>
+	<section class="py-12 text-lg sm:ml-64 xl:mr-64 text-hit-gray-500">
+		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">
+			Additive Shader
+		</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2>
-			<div class="flex flex-col lg:flex-row gap-6 mt-4">
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
+				About
+			</h2>
+			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
 					<p>
-						<Link classes="" href="https://steamcommunity.com/workshop/filedetails/?id=1410003347" text="The Additive Shader mod" theme="externallink" /> can be
-						used to create props or vehicle sub-meshes which use the additive shader and have custom turn on/off times.
+						<Link
+							classes=""
+							href="https://steamcommunity.com/workshop/filedetails/?id=1410003347"
+							text="The Additive Shader mod"
+							theme="externallink"
+						/> can be used to create props or vehicle sub-meshes which use the additive shader and have
+						custom turn on/off times.
 					</p><p class="mt-4">
-						As the name suggests, the shader is additive, so it can only add light, which looks similar to the screen layer blending mode in Photoshop. It also
-						produces bloom at high intensities.
-					</p><p class="mt-4">This article assumes you are familiar with regular prop or vehicle asset creation.</p>
+						As the name suggests, the shader is additive, so it can only add light, which looks similar to
+						the screen layer blending mode in Photoshop. It also produces bloom at high intensities.
+					</p><p class="mt-4">
+						This article assumes you are familiar with regular prop or vehicle asset creation.
+					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/mod/additive-shader/ex1.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.ex1.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.ex1}
-							naturalHeight={532}
-							naturalWidth={687}
-							srcWidths={[300, 400, 500, 600]}
 							alt="Additive shader vehicle sub-mesh used for LED displays on top of a train"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-square object-cover"
-							loading="eager"
+							class="w-full h-auto"
 						/></a
-					><p class="explanation">Additive shader vehicle sub-mesh used for LED displays on top of a train.</p>
+					><p class="explanation">
+						Additive shader vehicle sub-mesh used for LED displays on top of a train.
+					</p>
 				</div>
 			</div>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="limitations">Limitations</h2>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="buildings-sub-meshes">Buildings and sub-meshes</h3>
+			<h2
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
+				id="limitations"
+			>
+				Limitations
+			</h2>
+			<h3
+				class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500"
+				id="buildings-sub-meshes"
+			>
+				Buildings and sub-meshes
+			</h3>
 			<p class="mt-4">
-				Buildings, sub-buildings, and building sub-meshes have significant issues with render distances or unpredictable disappearance, therefore these use
-				cases are not recommended, use props instead.
+				Buildings, sub-buildings, and building sub-meshes have significant issues with render distances or
+				unpredictable disappearance, therefore these use cases are not recommended, use props instead.
 			</p>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="2-sided">2 sided</h3>
-			<p class="mt-4">Unlike almost all other shaders in the game, the additive shader is two-sided, meaning faces can be seen from the back side as well.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="script">Script</h2>
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="2-sided">
+				2 sided
+			</h3>
 			<p class="mt-4">
-				To save the necessary data and change the shader of your prop or vehicle sub-mesh to additive, you need to run <Link
+				Unlike almost all other shaders in the game, the additive shader is two-sided, meaning faces can be seen
+				from the back side as well.
+			</p>
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="script">
+				Script
+			</h2>
+			<p class="mt-4">
+				To save the necessary data and change the shader of your prop or vehicle sub-mesh to additive, you need
+				to run <Link
 					classes=""
 					href="https://gist.github.com/ronyx69/97a8efae47d6828f01d7d0ab8189fd73"
 					text="one of these scripts"
 					theme="externallink"
-				/> using the <Link classes="" href="https://steamcommunity.com/sharedfiles/filedetails/?id=450877484" text="ModTools" theme="externallink" /> console <span
-					class="key">F7</span
-				>.
+				/> using the <Link
+					classes=""
+					href="https://steamcommunity.com/sharedfiles/filedetails/?id=450877484"
+					text="ModTools"
+					theme="externallink"
+				/> console <span class="key">F7</span>.
 			</p>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="variables">Variables</h3>
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="variables">
+				Variables
+			</h3>
 			<p class="mt-4">At the top of the script, you can change some variables.</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="time-on-off">Time On/Off</h4>
+			<h4
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
+				id="time-on-off"
+			>
+				Time On/Off
+			</h4>
 			<p class="mt-4">
-				Controls the time of day (0-24 hours) at which the additive shader object will turn on or off. If both times are the same, it will be always on.
+				Controls the time of day (0-24 hours) at which the additive shader object will turn on or off. If both
+				times are the same, it will be always on.
 			</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="fade">Fade</h4>
+			<h4 class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12" id="fade">
+				Fade
+			</h4>
 			<p class="mt-4">
-				The additive shader decreases opacity as it gets closer to other objects. This value controls the strength of that effect, higher values make the fading
-				less noticeable.
+				The additive shader decreases opacity as it gets closer to other objects. This value controls the
+				strength of that effect, higher values make the fading less noticeable.
 			</p>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="intensity">Intensity</h4>
+			<h4
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
+				id="intensity"
+			>
+				Intensity
+			</h4>
 			<p class="mt-4">Light intensity multiplier, values above 1 may start to bloom.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="mesh">Mesh</h2>
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="mesh">
+				Mesh
+			</h2>
 			<p class="mt-4">There's nothing different about the mesh compared to regular assets.</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="textures">Textures</h2>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="diffuse">Diffuse</h3>
-			<div class="flex flex-col lg:flex-row gap-6 mt-4">
-				<div class="lg:w-2/3"><p>This is the only texture, it's used as the additive texture.</p></div><div class="lg:w-1/3">
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="textures">
+				Textures
+			</h2>
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="diffuse">
+				Diffuse
+			</h3>
+			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
+				<div class="lg:w-2/3"><p>This is the only texture, it's used as the additive texture.</p></div><div
+					class="lg:w-1/3"
+				>
 					<a href="/images/mod/additive-shader/diff.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.diff.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.diff}
-							naturalHeight={610}
-							naturalWidth={800}
-							srcWidths={[300, 400, 500, 600, 800]}
 							alt="The imported texture, and how it looks ingame"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="w-full h-auto"
 						/></a
 					><p class="explanation">The imported texture, and how it looks ingame.</p>
 				</div>
 			</div>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="lod">LOD</h2>
-			<p class="mt-4">The additive shader doesn't work for LOD models, therefore the mod increases the render distance based on the size of your asset.</p>
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="lod">
+				LOD
+			</h2>
+			<p class="mt-4">
+				The additive shader doesn't work for LOD models, therefore the mod increases the render distance based
+				on the size of your asset.
+			</p>
 		</div>
 	</section>
 </MainLayout>
