--- a/src/pages/mod/detail.astro
+++ b/src/pages/mod/detail.astro
@@ -3,109 +3,152 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Detail - Cities Skylines Modding';
-import ResponsiveImage from '../../components/ResponsiveImage.astro';
+import { Picture } from 'astro:assets';
 import { images } from '../../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
 	<TableOfContents />
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
-		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Detail</h1>
+	<section class="py-12 text-lg sm:ml-64 xl:mr-64 text-hit-gray-500">
+		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">Detail</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2>
-			<div class="flex flex-col lg:flex-row gap-6 mt-4">
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
+				About
+			</h2>
+			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
 					<p>
-						<Link classes="" href="https://steamcommunity.com/sharedfiles/filedetails/?id=1442713872" text="The Detail mod" theme="externallink" /> can be used
-						to create props with color variations chosen by the player using sliders, intended for color matching vegetation props and trees to the map theme
-						grass color.
-					</p><p class="mt-4">It can also set custom LOD and max render distances for props.</p><p class="mt-4">
+						<Link
+							classes=""
+							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1442713872"
+							text="The Detail mod"
+							theme="externallink"
+						/> can be used to create props with color variations chosen by the player using sliders,
+						intended for color matching vegetation props and trees to the map theme grass color.
+					</p><p class="mt-4">It can also set custom LOD and max render distances for props.</p><p
+						class="mt-4"
+					>
 						This article assumes you are familiar with prop and tree asset creation.
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/mod/detail/detnat.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.detnat.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.detnat}
-							naturalHeight={512}
-							naturalWidth={512}
-							srcWidths={[300, 400, 500]}
 							alt="Official detail nature pack"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-square object-cover"
+							class="w-full h-auto"
 							loading="eager"
 						/></a
 					><p class="explanation">
-						Official <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1442615478">Detail Nature</a> pack including various grass, plant,
-						mushroom, twig props and trees.
+						Official <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=1442615478"
+							>Detail Nature</a
+						> pack including various grass, plant, mushroom, twig props and trees.
 					</p>
 				</div>
 			</div>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="textures">Textures</h2>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="diffuse">Diffuse</h3>
-			<div class="flex flex-col lg:flex-row gap-6 mt-4">
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="textures">
+				Textures
+			</h2>
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="diffuse">
+				Diffuse
+			</h3>
+			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
 					<p>
-						Parts of the diffuse texture which will be affected by the color variation should be near gray and their average brightness should match that of the
-						official Detail Nature pack.
+						Parts of the diffuse texture which will be affected by the color variation should be near gray
+						and their average brightness should match that of the official Detail Nature pack.
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/mod/detail/detdiffuse.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.detdiffuse.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.detdiffuse}
-							naturalHeight={512}
-							naturalWidth={512}
-							srcWidths={[300, 400, 500]}
 							alt="Diffuse texture examples from Detail Nature"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-square object-cover"
-							loading="eager"
+							class="w-full h-auto"
 						/></a
 					><p class="explanation">Diffuse texture examples from Detail Nature.</p>
 				</div>
 			</div>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="color">Color</h3>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="props">Props</h4>
-			<div class="flex flex-col lg:flex-row gap-6 mt-4">
-				<div class="lg:w-2/3"><p>For props, the color map works as usual - the white parts will be affected by the color variation.</p></div><div
-					class="lg:w-1/3"
-				>
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="color">
+				Color
+			</h3>
+			<h4
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
+				id="props"
+			>
+				Props
+			</h4>
+			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
+				<div class="lg:w-2/3">
+					<p>
+						For props, the color map works as usual - the white parts will be affected by the color
+						variation.
+					</p>
+				</div><div class="lg:w-1/3">
 					<a href="/images/mod/detail/detc.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.detc.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.detc}
-							naturalHeight={256}
-							naturalWidth={768}
-							srcWidths={[300, 400, 500, 600, 700]}
 							alt="Diffuse texture examples from Detail Nature"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="w-full h-auto"
 						/></a
 					><p class="explanation">Diffuse texture and color map for props(left) and trees(right).</p>
 				</div>
 			</div>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="trees">Trees</h4>
+			<h4
+				class="pb-4 mt-8 text-xl font-medium border-b text-hit-gray-400 border-hit-gray-950 lg:mt-12"
+				id="trees"
+			>
+				Trees
+			</h4>
 			<p class="mt-4">
-				For trees, the color map works as usual - the black parts define where the "leaves" are. Using the Detail mod, these are also the parts which will be
-				affected by the color variation.
+				For trees, the color map works as usual - the black parts define where the "leaves" are. Using the
+				Detail mod, these are also the parts which will be affected by the color variation.
 			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="script">Script</h2>
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="script">
+				Script
+			</h2>
 			<p class="mt-4">
-				The scripts can be found <Link classes="" href="https://gist.github.com/ronyx69/459f32f2feb087e8c734f050b01b236e" text="here" theme="externallink" />.
-				The first script is for props and the second one for trees.
+				The scripts can be found <Link
+					classes=""
+					href="https://gist.github.com/ronyx69/459f32f2feb087e8c734f050b01b236e"
+					text="here"
+					theme="externallink"
+				/>. The first script is for props and the second one for trees.
 			</p>
-			<p class="mt-4">The mod is not required for creating and saving the assets, only for loading and using them ingame.</p>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="prop">Prop</h3>
+			<p class="mt-4">
+				The mod is not required for creating and saving the assets, only for loading and using them ingame.
+			</p>
+			<h3 class="pb-4 mt-16 text-2xl font-semibold border-b text-hit-gray-400 border-hit-gray-500" id="prop">
+				Prop
+			</h3>
 			<p class="mt-4">The prop script has some variables, such as LOD distance and max render distance.</p>
 			<p class="mt-4">
-				The vegetation toggle determines whether or not the color variations of this prop will be changed to the color chosen by the user in mod settings.
+				The vegetation toggle determines whether or not the color variations of this prop will be changed to the
+				color chosen by the user in mod settings.
 			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="source-files">Source Files</h2>
-			<p class="mt-4">You can download all the source files of the official Detail Nature prop &amp; tree pack.</p>
-			<div class="content-download mt-4">
-				<Link classes="" href="https://drive.google.com/open?id=1ff3geFWoI3b-wnFfg7869JC4rLCzNmqX" text="Download" theme="downloadbutton" />
+			<h2
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
+				id="source-files"
+			>
+				Source Files
+			</h2>
+			<p class="mt-4">
+				You can download all the source files of the official Detail Nature prop &amp; tree pack.
+			</p>
+			<div class="mt-4 content-download">
+				<Link
+					classes=""
+					href="https://drive.google.com/open?id=1ff3geFWoI3b-wnFfg7869JC4rLCzNmqX"
+					text="Download"
+					theme="downloadbutton"
+				/>
 			</div>
 		</div>
 	</section>
