--- a/src/pages/normal-maps.astro
+++ b/src/pages/normal-maps.astro
@@ -3,29 +3,41 @@ import MainLayout from '../layouts/MainLayout.astro';
 import Link from '../components/Link.astro';
 import TableOfContents from '../components/TableOfContents.astro';
 const title = 'Normal Maps - Cities Skylines Modding';
-import ResponsiveImage from '../components/ResponsiveImage.astro';
+import { Picture } from 'astro:assets';
 import { images } from '../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
 	<TableOfContents />
-	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
-		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">Normal Maps</h1>
+	<section class="py-12 text-lg sm:ml-64 xl:mr-64 text-hit-gray-500">
+		<h1 id="overview" class="pb-8 text-4xl font-bold border-b-4 border-hit-gray-600 text-hit-gray-400">
+			Normal Maps
+		</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2>
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="about">
+				About
+			</h2>
 			<p class="mt-4">
-				This article describes how to create correct normal maps in different situations, and potential problems while generating or importing them ingame.
+				This article describes how to create correct normal maps in different situations, and potential problems
+				while generating or importing them ingame.
 			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="generation">Generation</h2>
-			<div class="flex flex-col lg:flex-row gap-6 mt-4">
+			<h2
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
+				id="generation"
+			>
+				Generation
+			</h2>
+			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
 					<p>
-						Before you decide if you need to invert one of the normal map channels, you need to make sure the normal map generator you are using isn't inverting
-						it by default. Some normal map generators have settings for inverting the red(x) and green(y) channels, but some of them invert the red channel by
-						default.
+						Before you decide if you need to invert one of the normal map channels, you need to make sure
+						the normal map generator you are using isn't inverting it by default. Some normal map generators
+						have settings for inverting the red(x) and green(y) channels, but some of them invert the red
+						channel by default.
 					</p><p class="mt-4">
-						A regular normal map with no inversions looks as if it's lit from the top right - that means the red channel looks as if it's lit from the right,
-						but the green channel looks as if it's lit from the top. That means it appears to be lit from the positive x and y directions which is <Link
+						A regular normal map with no inversions looks as if it's lit from the top right - that means the
+						red channel looks as if it's lit from the right, but the green channel looks as if it's lit from
+						the top. That means it appears to be lit from the positive x and y directions which is <Link
 							classes=""
 							href="https://en.wikipedia.org/wiki/Normal_mapping#How_it_works"
 							text="the normal map standard"
@@ -34,42 +46,49 @@ import { images } from '../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/normalmaps/regularnm.png" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.regularnm.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.regularnm}
-							naturalHeight={128}
-							naturalWidth={384}
-							srcWidths={[300, 350]}
 							alt="A regular normal map without any inverted channels"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="w-full h-auto"
 						/></a
 					><p class="explanation">
-						A regular normal map without any inverted channels and its red and green channels shown separately. The letters are supposed to look extruded in
-						this example.
+						A regular normal map without any inverted channels and its red and green channels shown
+						separately. The letters are supposed to look extruded in this example.
 					</p>
 				</div>
 			</div>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="mesh-import-rotation">Mesh Import Rotation</h2>
+			<h2
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
+				id="mesh-import-rotation"
+			>
+				Mesh Import Rotation
+			</h2>
 			<p class="mt-4">
-				The rotation feature in the asset editor mesh importer is broken - it produces incorrect tangents, which will make normal maps appear incorrectly or not
-				at all depending on the orientation and uv mapping of each face.
+				The rotation feature in the asset editor mesh importer is broken - it produces incorrect tangents, which
+				will make normal maps appear incorrectly or not at all depending on the orientation and uv mapping of
+				each face.
 			</p>
-			<div class="flex gap-2 mt-6 items-start justify-start">
+			<div class="flex items-start justify-start gap-2 mt-6">
 				<svg
-					class="w-8 h-8 text-hoverlink flex-shrink-0"
+					class="flex-shrink-0 w-8 h-8 text-hoverlink"
 					fill="none"
 					stroke="currentColor"
 					stroke-width="1.5"
 					viewBox="0 0 24 24"
 					xmlns="http://www.w3.org/2000/svg"
 				>
-					<path d="M12 9v3.75m9-.75a9 9 0 11-18 0 9 9 0 0118 0zm-9 3.75h.008v.008H12v-.008z" stroke-linecap="round" stroke-linejoin="round"></path>
+					<path
+						d="M12 9v3.75m9-.75a9 9 0 11-18 0 9 9 0 0118 0zm-9 3.75h.008v.008H12v-.008z"
+						stroke-linecap="round"
+						stroke-linejoin="round"></path>
 				</svg>
 				<p class="italic">
 					<em>
-						If you would like to use the rotation feature without breaking the tangents and normal maps, use the <Link
+						If you would like to use the rotation feature without breaking the tangents and normal maps, use
+						the <Link
 							classes=""
 							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1518485094"
 							text="Mesh Import Rotation Tangents Fix mod"
@@ -78,40 +97,53 @@ import { images } from '../data/imageImports.js';
 					</em>
 				</p>
 			</div>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="assets">Assets</h2>
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="assets">
+				Assets
+			</h2>
 			<p class="mt-4">
-				For regular assets such as buildings, props, vehicles, trees, and citizens, the normal map works correctly with no inverted channels, according to the
-				standard described above.
+				For regular assets such as buildings, props, vehicles, trees, and citizens, the normal map works
+				correctly with no inverted channels, according to the standard described above.
 			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="networks">Networks</h2>
-			<p class="mt-4">For faces which are vertex painted magenta the normal map always works just like for any normal asset, as described above.</p>
+			<h2 class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400" id="networks">
+				Networks
+			</h2>
 			<p class="mt-4">
-				But for faces which are not vertex painted magenta (that means they use the automatic tiling as networks usually do) the green channel usually needs to
-				be inverted.
+				For faces which are vertex painted magenta the normal map always works just like for any normal asset,
+				as described above.
 			</p>
 			<p class="mt-4">
-				If you are creating a network using an asymmetric mesh, you would use the invert flag for the segment mesh to appear continuous and not flip every other
-				segment, this will result in the normal map green channel being inverted for every other segment. The solution for that is to have 2 different segment
+				But for faces which are not vertex painted magenta (that means they use the automatic tiling as networks
+				usually do) the green channel usually needs to be inverted.
+			</p>
+			<p class="mt-4">
+				If you are creating a network using an asymmetric mesh, you would use the invert flag for the segment
+				mesh to appear continuous and not flip every other segment, this will result in the normal map green
+				channel being inverted for every other segment. The solution for that is to have 2 different segment
 				meshes, one of which would have a flipped mesh or a flipped normal map, depending on the flags it has.
 			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="map-themes">Map Themes</h2>
-			<div class="flex flex-col lg:flex-row gap-6 mt-4">
+			<h2
+				class="pb-8 mt-24 text-4xl font-medium border-b-2 border-hit-gray-600 text-hit-gray-400"
+				id="map-themes"
+			>
+				Map Themes
+			</h2>
+			<div class="flex flex-col gap-6 mt-4 lg:flex-row">
 				<div class="lg:w-2/3">
-					<p>Map theme sand and cliff normal maps require an inverted green channel to appear correctly.</p><p class="mt-4">
-						The water normal map is animated ingame and constantly fades between a regular and an inverted version.
+					<p>Map theme sand and cliff normal maps require an inverted green channel to appear correctly.</p><p
+						class="mt-4"
+					>
+						The water normal map is animated ingame and constantly fades between a regular and an inverted
+						version.
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/normalmaps/themeig.png" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.themeig.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.themeig}
-							naturalHeight={344}
-							naturalWidth={384}
-							srcWidths={[300, 350]}
 							alt="A normal map with an inverted green channel"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-square object-cover"
-							loading="eager"
+							class="w-full h-auto"
 						/></a
 					><p class="explanation">A normal map with an inverted green channel and its appearance ingame.</p>
 				</div>
